src/css/global.css
/* Reset CSS */
@import "./reset.css";

@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Ultra&display=swap&text=I%27m%20Pijush");
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap");

/* Tailwind CSS */
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

/* Global CSS variables */
:root {
  --color-primary: #ffab00;
  --color-red: #ff5851;

  --font-ultra: "Ultra", serif;
  --font-playfair: "Playfair Display", serif;
}

/* Custom rules */
*,
*::after,
*::before {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

::selection {
  background: #ff6e00;
  color: #fff;
}

html {
  font-family: "Quicksand", sans-serif;
  font-size: 56.25%;
}

html,
body {
  overflow: hidden;
  width: 100vw;
  height: 100vh;
}

@media only screen and (min-width: 768px) {
  html {
    font-size: 62.5%;
  }
}

/* Theme customizations */
.light {
  --color-white: #fff;
  --color-black: #000;

  background-color: #fff;
}

.dark {
  --color-white: #333;
  --color-black: #fff;

  background-color: #333;
}

/* Simplebae customization */
.simplebar-scrollbar {
  width: 6px !important;
}
.simplebar-scrollbar:before {
  border: 3px solid var(--color-red) !important;
  border-radius: 10px !important;
  width: 0 !important;
}
.simplebar-scrollbar.simplebar-visible:before {
  opacity: 1 !important;
}

/* Pace js progressbar CSS */
.pace {
  pointer-events: none;
  user-select: none;
}

.pace-inactive {
  display: none;
}

.pace .pace-progress {
  background: linear-gradient(to right, var(--color-primary), var(--color-red));
  position: fixed;
  z-index: 9999;
  top: 0;
  right: 100%;
  width: 100%;
  height: 2px;
}

